--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.41'
+    ext.kotlin_version = '1.2.50'
     ext.jacoco_version = '0.8.1'
 
     repositories {
@@ -10,8 +10,9 @@ buildscript {
         mavenCentral()
     }
     dependencies {
+        classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.9.0"
         classpath "org.jacoco:org.jacoco.core:$jacoco_version"
-        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.android.tools.build:gradle:3.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:3.1.1'
     }
