--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'maven'
-
+apply from: 'maven-push.gradle'
 apply from: '../jacoco.gradle'
 
 android {
